<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TinyFittings on Firmata</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

        <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="led">LED</string>
    <string name="analog">Analog reading</string>
    <string name="read_analog">Read Analog Data</string>
    <string name="channel0">Channel 0:</string>
    <string name="channel1">Channel 1:</string>
    <string name="channel2">Channel 2:</string>
    <string name="channel3">Channel 3:</string>
    <string name="channel4">Channel 4:</string>
    <string name="channel5">Channel 5:</string>
    <string name="sensor_readings">SENSOR READINGS</string>
    <string name="inactive">Inactive</string>
    <string name="view_livedata">View Live Data</string>
</resources>